# meguru-ai-agents

./: .env  .gitignore  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt
.azure-pipelines/: azure-pipelines.yml
.github/workflows/: ci.yml
agents/: planner_agent.py  researcher_agent.py  summary_agent.py  taste_agent.py  vision_agent.py
meguru/: schemas.py
meguru/agents/: __init__.py  clarifier.py  curator.py  editor.py  intake.py  listener.py  memory.py  planner.py  planning.py  refiner.py  researcher.py  stylist.py  summary.py  taste.py
meguru/core/: __init__.py  db.py  evaluations.py  exporters.py  google_api.py  google_stub.py  llm.py  profile_store.py  supabase_api.py
meguru/tests/: test_google_api.py  test_listener.py  test_llm.py  test_plan_gallery.py  test_plan_workflow.py  test_trip_brief_memory.py  test_trip_pipeline.py
meguru/ui/: __init__.py  itinerary.py  map.py  plan.py  profile.py
meguru/workflows/: __init__.py  plan_chat.py  trip_pipeline.py
tests/: test_evals.py  test_listener_and_clarifier.py  test_profile_and_exports.py  test_schemas.py  test_trip_planner_flow.py  test_ui_imports.py
tests/ui/: test_itinerary_profile_fallback.py  test_plan_errors.py
workflows/: trip_planner_flow.py
